@@ -590,39 +590,6 @@ gbr_find_data_dir (const gchar *default_data_dir)
 }
 
 
-/** Locate the application's localization folder.
- *
- * The path is generated by the following pseudo-code evaluation:
- * \code
- * prefix + "/share/locale"
- * \endcode
- *
- * @param default_locale_dir  A default path which will used as fallback.
- * @return A string containing the localization folder's path, which must be freed when
- *         no longer necessary. If BinReloc is not initialized, or if the
- *         initialization function failed, then a copy of default_locale_dir will be returned.
- *         If default_locale_dir is NULL, then NULL will be returned.
- */
-gchar *
-gbr_find_locale_dir (const gchar *default_locale_dir)
-{
-	gchar *data_dir, *dir;
-
-	data_dir = gbr_find_data_dir (NULL);
-	if (data_dir == NULL) {
-		/* BinReloc not initialized. */
-		if (default_locale_dir != NULL)
-			return g_strdup (default_locale_dir);
-		else
-			return NULL;
-	}
-
-	dir = g_build_filename (data_dir, "locale", NULL);
-	g_free (data_dir);
-	return dir;
-}
-
-
 /** Locate the application's library folder.
  *
  * The path is generated by the following pseudo-code evaluation:
