@@ -31,6 +31,7 @@
 #define PKGLIBDIR "@-pkglibdir-@"
 
 #define LOCALE_DIR  "@-LOCALE_DIR-@"
+#define LOCALE_DATADIRNAME "@-DATADIRNAME-@"
 
 #define GNC_ACCOUNTS_DIR "@-GNC_ACCOUNTS_DIR-@"
 #define GNC_GLADE_DIR "@-GNC_GLADE_DIR-@"
